0.1-alpha3/_sources/signal/H12/GNS/3/1/index.rst.txt
:orphan:




H12/GNS/3/1
===========

This page describes a signal of selection found in the
:doc:`../../../../../population/GNS` populationusing the :doc:`../../../../../method/H12` statistic.The focus of this signal is on chromosome arm
**3R** between positions **28,480,000** and
**28,540,000**.
The evidence supporting this signal is
**strong** (:math:`\Delta_{i}` >= 100 on both flanks).





.. raw:: html
    :file: peak_location.html

.. raw:: html

    <div class='bokeh-figure figure'><p class='caption'>
    <strong>Signal location</strong>. Blue markers show the values of the selection statistic.
    The dashed black line shows the fitted peak model. The shaded red area shows the focus of the
    selection signal. The shaded blue area shows the genomic region in linkage with the
    selection event. Use the mouse wheel or the controls at the top right of the plot to zoom
    in, and hover over genes to see gene names and descriptions.
    </p></div>

Genes
-----


Gene :doc:`../../../../../gene/AGAP009184` overlaps the focal region.



The following 4 genes are within 50 kbp of the focal
region: :doc:`../../../../../gene/AGAP009185`,  :doc:`../../../../../gene/AGAP009187`:sup:`1` (Indanol dehydrogenase),  :doc:`../../../../../gene/AGAP009188` (solute carrier family 39 (zinc transporter), member 9),  :doc:`../../../../../gene/AGAP009189`.


Key to insecticide resistance candidate gene types: :sup:`1` metabolic;
:sup:`2` target-site; :sup:`3` behavioural; :sup:`4` cuticular.

Overlapping selection signals
-----------------------------

The following selection signals have a focus which overlaps with the
focus of this signal.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../../../../../signal/XPEHH/BFS.GWA/3/1/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 3R:28,500,000-28,620,000
      - 1,181
      - 100.0%
      - Gste
    * - :doc:`../../../../../signal/IHS/CMS/3/1/index`
      - IHS
      - Cameroon *An. gambiae*
      - 3R:28,320,000-28,700,000
      - 1,106
      - 100.0%
      - Gste
    * - :doc:`../../../../../signal/IHS/BFM/3/1/index`
      - IHS
      - Burkina Faso *An. coluzzii*
      - 3R:28,260,000-28,620,000
      - 1,058
      - 100.0%
      - Gste
    * - :doc:`../../../../../signal/H12/BFS/3/1/index`
      - H12
      - Burkina Faso *An. gambiae*
      - 3R:28,520,000-28,580,000
      - 995
      - 98.4%
      - Gste
    * - :doc:`../../../../../signal/XPEHH/UGS.GWA/3/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:28,540,000-28,600,000
      - 662
      - 100.0%
      - Gste
    * - :doc:`../../../../../signal/IHS/UGS/3/1/index`
      - IHS
      - Uganda *An. gambiae*
      - 3R:28,440,000-28,640,000
      - 493
      - 99.7%
      - Gste
    * - :doc:`../../../../../signal/XPEHH/GAS.GWA/3/1/index`
      - XPEHH
      - Gabon *An. gambiae*
      - 3R:28,540,000-28,620,000
      - 129
      - 100.0%
      - Gste
    




Diagnostics
-----------

The information below provides some diagnostics from the
:doc:`../../../../../method/peak_modelling` algorithm.

.. raw:: html

    <div class="figure">
    <img src="../../../../../_static/data/signal/H12/GNS/3/1/peak_finding.png"/>
    <p class="caption"><strong>Selection signal in context</strong>. @@TODO</p>
    </div>

.. raw:: html

    <div class="figure">
    <img src="../../../../../_static/data/signal/H12/GNS/3/1/peak_targetting.png"/>
    <p class="caption"><strong>Peak targetting</strong>. @@TODO</p>
    </div>

.. raw:: html

    <div class="figure">
    <img src="../../../../../_static/data/signal/H12/GNS/3/1/peak_fit.png"/>
    <p class="caption"><strong>Peak fitting diagnostics</strong>. @@TODO</p>
    </div>

Model fit reports
~~~~~~~~~~~~~~~~~

Peak model::

    [[Model]]
        Model(skewed_exponential_peak)
    [[Fit Statistics]]
        # function evals   = 28
        # data points      = 367
        # variables        = 4
        chi-square         = 0.060
        reduced chi-square = 0.000
        Akaike info crit   = -3194.511
        Bayesian info crit = -3178.889
    [[Variables]]
        center:      0 (fixed)
        amplitude:   0.28326051 +/- 0.005370 (1.90%) (init= 0.5)
        decay:       0.45228872 +/- 0.013125 (2.90%) (init= 0.5)
        skew:       -0.29560031 +/- 0.027878 (9.43%) (init= 0)
        baseline:    0.03147308 +/- 0.000761 (2.42%) (init= 0.03)
        ceiling:     1 (fixed)
        floor:       0 (fixed)
    [[Correlations]] (unreported correlations are <  0.100)
        C(amplitude, decay)          = -0.655 
        C(decay, baseline)           = -0.347 
        C(decay, skew)               =  0.127 


Null model::

    [[Model]]
        Model(constant)
    [[Fit Statistics]]
        # function evals   = 11
        # data points      = 366
        # variables        = 1
        chi-square         = 0.799
        reduced chi-square = 0.002
        Akaike info crit   = -2240.503
        Bayesian info crit = -2236.600
    [[Variables]]
        c:   0.04831459 +/- 0.002445 (5.06%) (init= 0.03)



Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


